--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     <button class="btn btn-primary" id="submitEmp">Submit</button>
     <div id="outputDiv">
         <h2>Employees</h2>
-        <ul id="empOut">
+        <div id="empOut" class="row">
 
-        </ul>
+        </div>
+        <h3>Monthly:</h3>
+        <div id="outputMonthly"></div>
     </div>
 </div>
     </body>
